--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,10 +40,18 @@ dependencies:
   get: ^4.6.6
   auto_size_text: ^3.0.0
   flutter_svg: ^2.0.10+1
+  easy_rich_text: ^2.1.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  flutter_launcher_icons: "^0.13.1"
+
+flutter_launcher_icons:
+  android: "launcher_icon"
+  ios: true
+  image_path: "assets/images/app_icon.png"
+  min_sdk_android: 21 # android min sdk min:16, default 21
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
